--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -2,7 +2,7 @@
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:300);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300|Lato:400,700);
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -50,7 +50,7 @@ a img {
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
   display: block; }
 
-/* #Global Styles
+/* Global Styles
 ================================================== */
 .container {
   margin: 0 auto; }
@@ -95,27 +95,8 @@ section.slide {
   vertical-align: middle; }
 
 .divider {
-  border-bottom: 1px solid #d7d7d7;
+  border-bottom: 1px solid #fff;
   margin-bottom: 20px; }
-
-.alert,
-.success {
-  text-align: center; }
-  .alert span,
-  .success span {
-    padding: 10px;
-    font-size: 14px;
-    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5); }
-
-.alert span {
-  border: 1px solid #eed3d7;
-  background: #f2dede;
-  color: #b94a48; }
-
-.success span {
-  border: 1px solid #8bef8b;
-  background: #94ef94;
-  color: #468847; }
 
 /* #Site Styles
 ================================================== */
@@ -124,14 +105,14 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Open Sans', sans-serif;
   padding: 0;
   margin: 0;
-  color: #808080; }
+  color: #fff; }
 
 h1 {
   font-size: 40px;
   line-height: 36px;
   padding: 0 0 60px; }
   h1 span {
-    border-bottom: 1px solid #d7d7d7; }
+    border-bottom: 1px solid #fff; }
 
 h2 {
   font-size: 30px;
@@ -155,23 +136,59 @@ p, cite {
   line-height: 30px;
   margin: 0;
   padding: 0 0 20px;
-  color: #808080; }
+  color: #fff; }
+
+p a {
+  color: #47738e;
+  font-style: italic;
+  font-family: 'Open Sans', sans-serif;
+  font-style: italic;
+  text-decoration: none; }
+  p a:hover {
+    text-decoration: underline; }
+
+button {
+  border: 2px solid #fff;
+  background: none;
+  padding: 0;
+  max-width: 250px;
+  margin: 10px auto;
+  transition: all 0.3s; }
+  button:hover {
+    background: #fff; }
+    button:hover a {
+      color: #666; }
+  button a {
+    font-family: 'Lato', sans-serif;
+    display: block;
+    padding: 5px 15px;
+    color: #fff;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 20px;
+    text-decoration: none;
+    text-transform: uppercase;
+    text-align: center;
+    letter-spacing: 2px;
+    transition: color 0.3s; }
 
 table tr.header {
-  background: #eee; }
+  background: #68ccd3; }
 table tr th {
   font-family: 'Open Sans', sans-serif;
   font-size: 18px;
   padding: 10px;
-  color: #808080;
+  color: #fff;
   text-align: center;
   border-right: 1px solid #fff; }
+  table tr th:last-child {
+    border-right: 0; }
 table tr td {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
   line-height: 20px;
   padding: 10px;
-  color: #808080; }
+  color: #fff; }
 
 cite, .emphasis {
   font-family: 'Open Sans', sans-serif;
@@ -187,15 +204,6 @@ cite {
     display: block;
     font-size: 20px; }
 
-p a {
-  color: #80a0f5;
-  font-style: italic;
-  font-family: 'Open Sans', sans-serif;
-  font-style: italic;
-  text-decoration: none; }
-  p a:hover {
-    text-decoration: underline; }
-
 blockquote {
   font-style: italic; }
 
@@ -205,32 +213,43 @@ strong {
 em {
   font-style: italic; }
 
-img#logo {
-  display: block;
-  width: 100%; }
+#intro {
+  background: url(/images/background.jpg); }
+
+#about, #gallery {
+  background: #95dae5; }
+
+#cv, #contact, #site-footer {
+  background: #41bfc7; }
 
 #intro {
-  background: url(/images/background.png); }
-
-#about, #cv, #contact, #site-footer {
-  background: #fff; }
-
-#gallery {
-  background: #eee; }
-
-#intro {
-  height: 100vh;
-  padding-top: 100px; }
-  #intro img {
-    width: 100%;
-    padding: 2px;
-    border: 1px solid #ccc; }
-
-#about {
-  background-image: url(/images/gallery/tv.jpg);
+  height: 80vh;
+  padding-top: 100px;
   background-size: cover; }
-  #about h1, #about p {
-    color: #fff; }
+  #intro .inner {
+    background-color: rgba(65, 191, 199, 0.55); }
+  #intro .decoration {
+    position: relative;
+    overflow: hidden;
+    padding: 0; }
+  #intro .right {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%); }
+    #intro .right .info-box {
+      margin: 60px;
+      text-align: center; }
+  #intro img {
+    width: 100%; }
+  #intro p, #intro hr {
+    line-height: 2em;
+    letter-spacing: 1px;
+    color: #fff;
+    text-align: center; }
+  #intro hr {
+    margin: 20px 0;
+    border-style: solid; }
 
 #gallery .inner {
   max-width: 960px;
@@ -258,11 +277,13 @@ img#logo {
   margin-bottom: 10px; }
   #twitter-block p {
     margin-bottom: 10px; }
+    #twitter-block p img {
+      width: 50%; }
 
 #site-footer .inner {
   padding-top: 20px;
   padding-bottom: 15px;
-  border-top: 1px solid #d7d7d7; }
+  border-top: 1px solid #fff; }
 #site-footer h3, #site-footer p {
   text-align: center; }
 #site-footer p, #site-footer a {
@@ -272,7 +293,7 @@ img#logo {
 /* #menus
 ================================================== */
 #primary {
-  background: #222; }
+  background: #fff; }
 
 .variable-center-nav {
   position: fixed;
@@ -280,7 +301,7 @@ img#logo {
   z-index: 150;
   margin: 0;
   overflow: hidden;
-  font-family: 'Open Sans', sans-serif; }
+  font-family: 'Lato', sans-serif; }
   .variable-center-nav h2.smart-reveal {
     display: none;
     width: 100%;
@@ -303,26 +324,25 @@ img#logo {
       right: 50%; }
       .variable-center-nav ul li a, .variable-center-nav ul li span {
         line-height: 20px;
-        padding: 19px;
+        padding: 20px;
         display: block;
         text-decoration: none;
         outline: none;
-        color: white;
-        font-weight: normal;
-        font-size: 1.4em;
-        line-height: 1.2em;
-        color: white;
+        color: #29a26a;
+        font-weight: 400;
+        font-size: 1em;
+        line-height: 1.8em;
         text-transform: uppercase;
         transition: color 0.3s; }
       .variable-center-nav ul li a:hover {
-        color: #80a0f5; }
+        color: #84e0b5; }
       .variable-center-nav ul li span.menu-divide {
         font-size: 12px;
         padding: 20px 10px; }
     .variable-center-nav ul li:first-child {
       border-left: none; }
 
-/* #Responsive
+/* Responsive
 ================================================== */
 @media only screen and (max-width: 800px) {
   .inner {
@@ -341,7 +361,6 @@ img#logo {
       line-height: 20px;
       padding: 0;
       display: block;
-      color: white;
       font-weight: normal;
       font-size: 30px;
       line-height: 20px;
@@ -351,7 +370,6 @@ img#logo {
       .variable-center-nav h2.smart-reveal a {
         text-decoration: none;
         outline: none;
-        color: white;
         background: url(/images/menu-icon.svg) no-repeat 15px;
         padding: 15px 60px;
         display: block; }
@@ -390,9 +408,20 @@ img#logo {
     float: none; } }
 @media only screen and (max-width: 700px) {
   #intro {
-    padding-top: 60px; }
+    height: auto;
+    padding-top: 60px;
+    background: #95dae5; }
     #intro .inner {
-      width: 480px; }
+      width: 480px;
+      background-color: #41bfc7; }
+    #intro .decoration {
+      overflow: visible; }
+    #intro .right {
+      position: static;
+      top: 0;
+      transform: none; }
+      #intro .right .info-box {
+        margin: 20px; }
 
   section.slide {
     padding-top: 30px; } }
@@ -422,11 +451,3 @@ img#logo {
 @media only screen and (max-width: 480px) {
   #intro .inner {
     width: 240px; } }
-/* #Font-Face
-================================================== */
-@font-face {
-  font-family: 'bebas_neueregular';
-  src: url("/fonts/bebasneue-webfont.eot");
-  src: url("/fonts/bebasneue-webfont.eot?#iefix") format("embedded-opentype"), url("/fonts/bebasneue-webfont.woff") format("woff"), url("/fonts/bebasneue-webfont.ttf") format("truetype"), url("/fonts/bebasneue-webfont.svg#bebas_neueregular") format("svg");
-  font-weight: normal;
-  font-style: normal; }
