--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -95,7 +95,7 @@ section.slide {
   vertical-align: middle; }
 
 .divider {
-  border-bottom: 1px solid #aeaeae;
+  border-bottom: 1px solid #9f8c7c;
   margin-bottom: 20px; }
 
 /* #Site Styles
@@ -105,14 +105,14 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Open Sans', sans-serif;
   padding: 0;
   margin: 0;
-  color: #555; }
+  color: #9f8c7c; }
 
 h1 {
   font-size: 40px;
   line-height: 36px;
   padding: 0 0 60px; }
   h1 span {
-    border-bottom: 1px solid #aeaeae; }
+    border-bottom: 1px solid #9f8c7c; }
 
 h2 {
   font-size: 30px;
@@ -129,6 +129,10 @@ h4 {
   line-height: 30px;
   padding: 0 0 20px; }
 
+div {
+  font-family: 'Open Sans', sans-serif;
+  color: #9f8c7c; }
+
 p, cite {
   font-family: 'Open Sans', sans-serif;
   display: block;
@@ -136,10 +140,9 @@ p, cite {
   line-height: 30px;
   margin: 0;
   padding: 0 0 20px;
-  color: #555; }
+  color: #9f8c7c; }
 
 p a {
-  color: #47738e;
   font-style: italic;
   font-family: 'Open Sans', sans-serif;
   font-style: italic;
@@ -173,12 +176,12 @@ button {
     transition: color 0.3s; }
 
 table tr.header {
-  background: #f9f8f3; }
+  background: #7b9a90; }
 table tr th {
   font-family: 'Open Sans', sans-serif;
   font-size: 18px;
   padding: 10px;
-  color: #555;
+  color: #fff;
   text-align: center;
   border-right: 1px solid #fff; }
   table tr th:last-child {
@@ -188,7 +191,7 @@ table tr td {
   font-size: 16px;
   line-height: 20px;
   padding: 10px;
-  color: #555; }
+  color: #7b9a90; }
 
 cite, .emphasis {
   font-family: 'Open Sans', sans-serif;
@@ -216,21 +219,37 @@ em {
 #intro {
   background: url(/images/background.jpg); }
 
-#about, #gallery, #contact, #site-footer {
+#about, #gallery {
   background: #f9f8f3; }
+  #about h1, #about h3, #about p, #gallery h1, #gallery h3, #gallery p {
+    color: #9f8c7c; }
+  #about h1 span, #gallery h1 span {
+    border-bottom: 1px solid #9f8c7c; }
+  #about p a, #gallery p a {
+    color: #5a4d42; }
 
-#cv {
+#cv, #contact, #site-footer {
   background: #daede7; }
+  #cv h1, #cv h3, #cv p, #contact h1, #contact h3, #contact p, #site-footer h1, #site-footer h3, #site-footer p {
+    color: #7b9a90; }
+  #cv h1 span, #contact h1 span, #site-footer h1 span {
+    border-bottom: 1px solid #7b9a90; }
+  #cv p a, #contact p a, #site-footer p a {
+    color: #364641; }
 
 #media {
   background: #000; }
 
 #intro {
-  height: 80vh;
-  padding-top: 100px;
-  background-size: cover; }
+  min-height: 80vh;
+  background-size: cover;
+  display: flex;
+  align-items: center; }
   #intro .inner {
-    background-color: rgba(65, 191, 199, 0.55); }
+    background-color: rgba(65, 191, 199, 0.55);
+    width: 100%;
+    max-width: 860px;
+    margin-top: 68px; }
   #intro .decoration {
     position: relative;
     overflow: hidden;
@@ -239,7 +258,8 @@ em {
     position: absolute;
     top: 50%;
     right: 0;
-    transform: translateY(-50%); }
+    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%); }
     #intro .right .info-box {
       margin: 60px;
       text-align: center; }
@@ -251,16 +271,17 @@ em {
     color: #fff;
     text-align: center; }
   #intro hr {
-    margin: 20px 0;
+    margin: 5px 0 20px 0;
     border-style: solid; }
 
 #gallery .inner {
   max-width: 960px;
   margin: 0 auto;
   padding-top: 20px; }
-  #gallery .inner .fotorama__stage img {
-    top: -5px !important;
-    box-shadow: 0 0 8px #aaa !important; }
+  #gallery .inner .fotorama__stage {
+    background-color: rgba(159, 140, 124, 0.3); }
+    #gallery .inner .fotorama__stage img {
+      box-shadow: 0 0 8px #aaa !important; }
   #gallery .inner .fotorama__nav-wrap {
     margin-top: 5px; }
 
@@ -272,7 +293,7 @@ em {
 #media {
   margin: 0 auto; }
   #media .inner {
-    width: 80%; }
+    width: 82%; }
 
 #contact p {
   padding: 0; }
@@ -280,9 +301,13 @@ em {
     padding-bottom: 40px; }
   #contact p span {
     padding-left: 15px; }
+#contact img {
+  width: 40px; }
 
 #twitter-block {
-  margin-bottom: 10px; }
+  margin-bottom: 10px;
+  background-color: #c9e5dc;
+  border-radius: 5px; }
   #twitter-block p {
     margin-bottom: 10px; }
     #twitter-block p img {
@@ -291,7 +316,7 @@ em {
 #site-footer .inner {
   padding-top: 20px;
   padding-bottom: 15px;
-  border-top: 1px solid #aeaeae; }
+  border-top: 1px solid #c3d1cd; }
 #site-footer h3, #site-footer p {
   text-align: center; }
 #site-footer p, #site-footer a {
@@ -370,7 +395,7 @@ em {
       padding: 0;
       display: block;
       font-weight: normal;
-      font-size: 30px;
+      font-size: 25px;
       line-height: 20px;
       font-family: 'Open Sans', sans-serif;
       text-transform: uppercase;
@@ -380,7 +405,8 @@ em {
         outline: none;
         background: url(/images/menu-icon.svg) no-repeat 15px;
         padding: 15px 60px;
-        display: block; }
+        display: block;
+        color: #29a26a; }
     .variable-center-nav ul.depth_0 {
       display: none; }
       .variable-center-nav ul.depth_0 li {
@@ -391,7 +417,7 @@ em {
           width: 100%;
           padding: 5px 0;
           margin: 0;
-          border-top: 1px dotted #666;
+          border-top: 1px dotted #ccc;
           border-left: none; }
         .variable-center-nav ul.depth_0 li span.menu-divide {
           display: none; }
@@ -402,7 +428,13 @@ em {
       display: block; }
 
   #intro .inner {
-    width: 720px; }
+    width: 60%; }
+    #intro .inner .right {
+      position: inherit;
+      top: 0;
+      right: 0;
+      transform: none;
+      -webkit-transform: none; }
 
   #work div.detail {
     width: 100%;
@@ -417,17 +449,17 @@ em {
 @media only screen and (max-width: 700px) {
   #intro {
     height: auto;
-    padding-top: 60px;
-    background: #f9f8f3; }
+    padding-top: 60px; }
     #intro .inner {
-      width: 480px;
-      background-color: #daede7; }
+      width: 60%;
+      margin-top: 0; }
     #intro .decoration {
       overflow: visible; }
     #intro .right {
       position: static;
       top: 0;
-      transform: none; }
+      transform: none;
+      -webkit-transform: none; }
       #intro .right .info-box {
         margin: 20px; }
 
@@ -435,24 +467,32 @@ em {
     padding-top: 30px; } }
 @media only screen and (max-width: 500px) {
   h1 {
-    font-size: 50px;
-    line-height: 45px; }
+    font-size: 40px;
+    line-height: 35px; }
 
   h2 {
     font-size: 30px;
     line-height: 30px; }
 
   h3 {
-    font-size: 25px;
-    line-height: 30px; }
-
-  h4 {
     font-size: 22px;
     line-height: 24px; }
 
+  h4 {
+    font-size: 18px;
+    line-height: 220px; }
+
   p, cite {
-    font-size: 15px;
-    line-height: 20px; }
+    font-size: 16px;
+    line-height: 28px; }
+
+  table tr th {
+    font-size: 16px; }
+  table tr td {
+    font-size: 14px; }
+
+  #cv .decoration {
+    padding: 0; }
 
   #site-footer p.right, #site-footer p.left {
     float: none; } }
