changed gallery background

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -376,7 +376,7 @@ em
 	padding-top: 20px;
 	.fotorama__stage
 	{
-		background-color: rgba(159, 140, 124, 0.3);
+		background: url('/images/gallery-bg.gif');
 		img
 		{
 			box-shadow: 0 0 8px #aaa !important;
